--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ input {
 .footer {
     margin-top: 5rem;
     background-color: #000000;
-    height: 600px;
+    height: 100vh;
     padding: 0px;
     
 }
@@ -173,6 +173,7 @@ input {
     padding-top: 70px; 
     width: 75vw;
     margin: auto;
+    flex-wrap: wrap;
 }
 
 .elements {
@@ -180,3 +181,24 @@ input {
     font-size: 13px;
     margin-top: 10px;
 }
+
+  
+  /* Tablets format */
+  @media (min-width: 768px) and (max-width: 1024px) {
+    .bottom-divs {
+        justify-content: flex-start;
+      }
+    .box {
+        width: calc(33.33% - 20px);
+      }
+  }
+
+  /* Phones format */
+@media (max-width: 767px) {
+    .bottom-divs {
+        justify-content: flex-start;
+      }
+    .box {
+        width: calc(50% - 20px);
+      }
+  }
